# ComfyUI-GeometryPack

./: .gitignore  BLENDER_INTEGRATION.md  LICENSE  MVP_PLAN.md  README.md  __init__.py  blender_install.py  comfy-dev.toml  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  comfyui_env.toml  install.py  mesh_utils.py  nodes.py  prestartup_script.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test_nodes.py  workflows_preview.html
assets/: mount_textured.glb
build_vtk_bundle/: package-lock.json  webpack.config.js
install_scripts/: __init__.py  cumesh.py  python_deps.py  system_deps.py
nodes/: __init__.py  _split_nodes.py  io.py  mesh_utils.py  remeshing.py  repair.py  texture_remeshing.py  uv.py
tests/: .gitignore  README.md  requirements-test.txt
web/: viewer.html  viewer_dual.html  viewer_dual_textured.html  viewer_gaussian.html  viewer_pbr.html  viewer_vtk.html  viewer_vtk_fields.html  viewer_vtk_filters.html  viewer_vtk_sidebyside.html  viewer_vtk_textured.html
workflows/: alpha_wrap.json  batch_remesh.json  boolean_ops.json  bunnyremesh_api.json  depth_map_to_mesh.json  fill_holes.json  fix_intersections_removal.json  fix_normals.json  fix_self_intersection.json  mesh_info.json  mesh_mesh_distance.json  normals.json  point_mesh_distance.json  preview_mesh_threejs.json  refine_mesh.json  remesh_intersections.json  remesh_texture.json  remeshing.json  remeshing_CGAL.json  remeshing_blender.json  remeshing_gpu.json  side_by_side_viewer.json  surface_reconstruction.json  test_loading.json  transform.json  (+2 more)
(+181 files in other folders)
