[project]
name = "ComfyUI-GeometryPack"
description = "CGAL - Blender - IGL - Paraview - VTK. Geometry processing nodes for ComfyUI - mesh manipulation, remeshing, hole filling, UV unwrapping, Alpha Wrapping, and 3D visualization"
version = "0.1.16"
license = {file = "LICENSE"}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "GeometryPack"
Icon = ""
